# Android

./: readme.md
ELF/Elf explorer/: Elf Explorer.sln  readme.txt
ELF/Elf explorer/Elf Explorer/: Elf Explorer.cpp  Elf Explorer.h  Elf Explorer.vcxproj  Elf Explorer.vcxproj.filters  Elf ExplorerDlg.cpp  Elf ExplorerDlg.h  ElfExplorer.aps  ElfExplorer.rc  resource.h
ELF/Elf explorer/参考引用/: FixElfSection-master.7z
ELF/HOOK/: readme.txt
ELF/MyLinker/: Readme.md  settings.gradle
ELF/MyLinker/app/src/main/cpp/: CMakeLists.txt  MyLoader.cpp  MyLoader.h  native-lib.cpp  soinfo.h
ELF/MyLinker/app/src/main/cpp/include/: linked_list.h  linker_reloc_iterators.h  linker_sleb128.h  macros.h
Tools/: readme.txt
algorithm/: readme.md
algorithm/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  FileName.cpp  md5.cpp  md5.h
antiDebug/antiDebug02/: settings.gradle.kts
apksigner/: apksigner.aps  apksigner.cpp  apksigner.h  apksigner.rc  apksigner.sln  apksigner.vcxproj  apksigner.vcxproj.filters  apksignerDlg.cpp  apksignerDlg.h  resource.h
apksigner/res/: apksigner.rc2
book/: APP技术检测.docx
checkfrida/mydebug/: settings.gradle
frida-js/mydumpdexjs/: myfridadump.js  readme.md
frida-js/myfrida_dexdumpjs/: HelloDex_tag.dex  myfrida_dexdump.js
frida-js/myunpackjs/: myunpack.js
packer/: readme  readme.md
packer/一代壳/: readme.md
packer/三代壳/: readme.md
packer/二代壳/: readme.md
signcheck/hookpms/: settings.gradle.kts
signcheck/signCheck01/: settings.gradle.kts
(+133 files in other folders)
